Bug 343454 CJK problem on font switching r=pavlov+masayuki